# aoc-cpp-template

./: .gitignore  CMakeLists.txt  README.md  generate_day.cmake  main.cpp  tests.cmake
cli/: SolverFactory.h
src/: ArgsParser.h  DaySolver.h  Utils.h  main.cpp
src/cli/: ArgsParser.h  Result.h  Utils.h
templates/: day_template.cpp.in  day_template.h.in  inputs.h.in
tests/: solution_check.cpp
